# segment-tree

./: README.md  main.py  pyproject.toml
segment_tree/: interval.py  node.py  segment_tree.py
tests/: conftest.py  test_interval.py  test_node.py  test_segment_tree.py
